--- a/galagz-site/pom.xml
+++ b/galagz-site/pom.xml
@@ -133,5 +133,17 @@
             <groupId>commons-dbcp</groupId>
             <artifactId>commons-dbcp</artifactId>
         </dependency>
+        
+        <!-- AR: Inventory -->
+        <dependency>
+            <groupId>org.broadleafcommerce</groupId>
+            <artifactId>broadleaf-inventory</artifactId>
+        </dependency>
+        
+        <!-- AR: MySQL -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
     </dependencies>
 </project>
