--- a/pom.xml
+++ b/pom.xml
@@ -275,6 +275,22 @@
                 <type>jar</type>
                 <scope>compile</scope>
             </dependency>
+            
+            <!--AR: Inventory -->
+            <dependency>
+			    <groupId>org.broadleafcommerce</groupId>
+			    <artifactId>broadleaf-inventory</artifactId>
+			    <version>1.0.0-SNAPSHOT</version>
+			</dependency>
+			
+			<!-- AR: MySQL -->
+			<dependency>
+			    <groupId>mysql</groupId>
+			    <artifactId>mysql-connector-java</artifactId>
+			    <version>5.1.25</version>
+			    <type>jar</type>
+			    <scope>compile</scope>
+			</dependency>
         </dependencies>
     </dependencyManagement>
     <modules>
